--- a/pages/admin.html
+++ b/pages/admin.html
@@ -6,6 +6,18 @@
     <title>Administrar Copa América 2024</title>
 </head>
 <body>
+    <header>
+        <h1>Administracion Copa America 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Inicio</a></li>            
+                <li><a href="/pages/results.html">Tabla de Resultados</a></li>
+                <li><a href="/pages/admin.html">Admin</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
     <h1>Administrar Copa América 2024</h1>
 
     <h2>Grupos de la Copa América 2024</h2>
@@ -145,5 +157,11 @@
     <button id="Final-button">Guardar y Motrar Ganador de la Copa America 2024</button>
 
     <script src="/js/app.js"></script>
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
