--- a/pages/admin.html
+++ b/pages/admin.html
@@ -10,9 +10,9 @@
         <h1>Administracion Copa America 2024</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Inicio</a></li>            
-                <li><a href="/pages/results.html">Tabla de Resultados</a></li>
-                <li><a href="/pages/admin.html">Admin</a></li>
+                <li><a href="index.html">Inicio</a></li>            
+                <li><a href="pages/results.html">Tabla de Resultados</a></li>
+                <li><a href="pages/admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
