--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Copa America 2024</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>            
-                <li><a href="pages/results.html">Tabla de Resultados</a></li>
-                <li><a href="pages/admin.html">Admin</a></li>
+                <li><a href="/index.html">Inicio</a></li>            
+                <li><a href="/pages/results.html">Tabla de Resultados</a></li>
+                <li><a href="/pages/admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
