fix href styles

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <p>&copy; Copa America 2024 - EnterTechTeam-RicOmar. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script src=""></script>
 </body>
 </html>
