--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrar Copa América 2024</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Administrar Copa América 2024</title>>
 </head>
 <body>
     <header>
@@ -158,12 +156,12 @@
     </table>
     <button id="Final-button">Guardar y Motrar Ganador de la Copa America 2024</button>
 
-    <script src="/js/app.js"></script>
+
     </main>
 
     <footer>
 
     </footer>
-
+    <script src="/js/app.js"></script>
 </body>
 </html>
