--- a/pages/admin.html
+++ b/pages/admin.html
@@ -162,6 +162,7 @@
     <footer>
 
     </footer>
+    <script src="/js/objetos.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
