prueba de render

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
             <p>Información sobre el proyecto.</p>
         </section>
         
-        <section>
-            <table id="tablaGrupos">
-                <thead>
-                    <th>1</th>
-                    <th>1</th>
-                    <th>1</th>
-                </thead>
-                <tbody id="Grupo_A">
+        <section id="grupos">
+            <h2>Info-Grupos</h2>
+            <div id="tablaGrupos"></div>
+        </section>
 
-                </tbody>
-            </table>
+        <section id="llaves">
+            <h2>Encuentros Fase de Grupos</h2>
+            <div id="tablaEncuentros"></div>
         </section>
     </main>
     
