--- a/pages/prueba.html
+++ b/pages/prueba.html
@@ -3,33 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Tabla</title>
 </head>
 <body>
-    <table class="tablaGrupo">
+    <h2>Grupo A</h2>
+    <table class="tablaGrupo" id="tablaGrupoA">
         <thead>
             <tr>
                 <th>Puesto</th>
                 <th>País</th>
-                <th>Ptos</th>
-                <th>Ptos</th>
+                <th>Puntos</th>
+                <th>Partidos Ganados</th>
+                <th>Partidos Empatados</th>
+                <th>Partidos Perdidos</th>
+                <th>Goles a Favor</th>
+                <th>Goles en Contra</th>
+                <th>Diferencia de Goles</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>España</td>
-                <td>100</td>
-                <td>200</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Francia</td>
-                <td>90</td>
-                <td>180</td>
-            </tr>
         </tbody>
     </table>
+    <h2>Grupo B</h2>
+    <table class="tablaGrupo" id="tablaGrupoB">
+        <thead>
+            <tr>
+                <th>Puesto</th>
+                <th>País</th>
+                <th>Puntos</th>
+                <th>Partidos Ganados</th>
+                <th>Partidos Empatados</th>
+                <th>Partidos Perdidos</th>
+                <th>Goles a Favor</th>
+                <th>Goles en Contra</th>
+                <th>Diferencia de Goles</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <h2>Grupo C</h2>
+    <table class="tablaGrupo" id="tablaGrupoC">
+        <thead>
+            <tr>
+                <th>Puesto</th>
+                <th>País</th>
+                <th>Puntos</th>
+                <th>Partidos Ganados</th>
+                <th>Partidos Empatados</th>
+                <th>Partidos Perdidos</th>
+                <th>Goles a Favor</th>
+                <th>Goles en Contra</th>
+                <th>Diferencia de Goles</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <h2>Grupo D</h2>
+    <table class="tablaGrupo" id="tablaGrupoD">
+        <thead>
+            <tr>
+                <th>Puesto</th>
+                <th>País</th>
+                <th>Puntos</th>
+                <th>Partidos Ganados</th>
+                <th>Partidos Empatados</th>
+                <th>Partidos Perdidos</th>
+                <th>Goles a Favor</th>
+                <th>Goles en Contra</th>
+                <th>Diferencia de Goles</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <script src="/js/objetos.js"></script>
 </body>
 </html>
