--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <img src="img/logo-Copa-America.png" alt="Logo Copa América">
         <h1>Copa America 2024</h1>
         <nav>
             <ul>
@@ -20,6 +21,25 @@
             </ul>
         </nav>
     </header>
+
+    <div class="team-banner">
+        <img src="img/arg.png" alt="Argentina">
+        <img src="img/bol.png" alt="Bolivia">
+        <img src="img/bra.png" alt="Brasil">
+        <img src="img/can.png" alt="Canadá">
+        <img src="img/chi.png" alt="Chile">
+        <img src="img/col.png" alt="Colombia">
+        <img src="img/cos.png" alt="Costa Rica">
+        <img src="img/ecu.png" alt="Ecuador">
+        <img src="img/eeuu.png" alt="Estados Unidos">
+        <img src="img/jam.png" alt="Jamaica">
+        <img src="img/mex.png" alt="México">
+        <img src="img/pan.png" alt="Panamá">
+        <img src="img/par.png" alt="Paraguay">
+        <img src="img/per.png" alt="Perú">
+        <img src="img/uru.png" alt="Uruguay">
+        <img src="img/ven.png" alt="Venezuela">
+    </div>
 
     <main>
         <section id="inicio">
@@ -44,10 +64,13 @@
             <div id="tablaLlaves"></div>
         </section>
         <button id="reiniciar-button">Reiniciar App</button>
+        
     </main>
 
     <footer>
+        <img src="img/enter-tech-logo.jpg" alt="Logo Enter">
         <p>&copy; Copa America 2024 - EnterTechTeam-RicOmar. Todos los derechos reservados.</p>
+        <p>Developers: Ricardo Delgado - Omar Torbisco.</p>
     </footer>
 
     <script src="js/objetos.js"></script>
