--- a/index.html
+++ b/index.html
@@ -12,33 +12,50 @@
 <body>
     <header>
         <img src="img/logo-Copa-America.png" alt="Logo Copa América">
-        <h1>Copa America 2024</h1>
+        <br>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/results.html">Tabla de Resultados</a></li>
-                <li><a href="pages/admin.html">Admin</a></li>
+                <li><a href="index.html">Proyecto: Simulador de la Copa America 2024</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="team-banner">
-        <img src="img/arg.png" alt="Argentina">
-        <img src="img/bol.png" alt="Bolivia">
-        <img src="img/bra.png" alt="Brasil">
-        <img src="img/can.png" alt="Canadá">
-        <img src="img/chi.png" alt="Chile">
-        <img src="img/col.png" alt="Colombia">
-        <img src="img/cos.png" alt="Costa Rica">
-        <img src="img/ecu.png" alt="Ecuador">
-        <img src="img/eeuu.png" alt="Estados Unidos">
-        <img src="img/jam.png" alt="Jamaica">
-        <img src="img/mex.png" alt="México">
-        <img src="img/pan.png" alt="Panamá">
-        <img src="img/par.png" alt="Paraguay">
-        <img src="img/per.png" alt="Perú">
-        <img src="img/uru.png" alt="Uruguay">
-        <img src="img/ven.png" alt="Venezuela">
+        <div class="inner">
+            <img src="img/arg.png" alt="Argentina">
+            <img src="img/bol.png" alt="Bolivia">
+            <img src="img/bra.png" alt="Brasil">
+            <img src="img/can.png" alt="Canada">
+            <img src="img/chi.png" alt="Chile">
+            <img src="img/col.png" alt="Colombia">
+            <img src="img/cos.png" alt="Costa Rica">
+            <img src="img/ecu.png" alt="Ecuador">
+            <img src="img/eeuu.png" alt="Estados Unidos">
+            <img src="img/jam.png" alt="Jamaica">
+            <img src="img/mex.png" alt="Mexico">
+            <img src="img/pan.png" alt="Panama">
+            <img src="img/par.png" alt="Paraguay">
+            <img src="img/per.png" alt="Peru">
+            <img src="img/uru.png" alt="Uruguay">
+            <img src="img/ven.png" alt="Venezuela">
+            <!-- Para repetir Bucle -->
+            <img src="img/arg.png" alt="Argentina">
+            <img src="img/bol.png" alt="Bolivia">
+            <img src="img/bra.png" alt="Brasil">
+            <img src="img/can.png" alt="Canada">
+            <img src="img/chi.png" alt="Chile">
+            <img src="img/col.png" alt="Colombia">
+            <img src="img/cos.png" alt="Costa Rica">
+            <img src="img/ecu.png" alt="Ecuador">
+            <img src="img/eeuu.png" alt="Estados Unidos">
+            <img src="img/jam.png" alt="Jamaica">
+            <img src="img/mex.png" alt="Mexico">
+            <img src="img/pan.png" alt="Panama">
+            <img src="img/par.png" alt="Paraguay">
+            <img src="img/per.png" alt="Peru">
+            <img src="img/uru.png" alt="Uruguay">
+            <img src="img/ven.png" alt="Venezuela">
+        </div>
     </div>
 
     <main>
