--- a/copy.html
+++ b/copy.html
@@ -75,7 +75,12 @@
             <h2>Tabla de Posiciones - Fase de Grupos</h2>
             <div id="tablaPosiciones"></div>
         </section>
-        <hr>        
+        <hr>
+        <section id="llaves">
+            <h2>Partidos de Fase de Llaves</h2>
+            <div id="tablaLlaves"></div>
+        </section>
+        
         
     </main>
 
@@ -86,7 +91,7 @@
     </footer>
 
     <script src="js/objetos.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/render.js"></script>
 </body>
 
 </html>
